# aotyapi

./: README.md  pyproject.toml
aotyapi/: api.py  client.py  constants.py
tests/: test_client.py
